format pages and add branzino page and media
delete outdated pizza image. Add Branzino recipe page and supporting
media. Reformatted pizza and lasagna recipe pages via html.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title></title>
+  <title>Lasagna Recipe</title>
   <link rel="stylesheet" href="../base.css">
 </head>
 
@@ -14,11 +14,18 @@
 
   <h2>Tell Me More!</h2>
 
-  <p>While many of us think that lasagna pasta came from Italy, there are people who would argue that lasagna originated in Greece or England. Anyway, the lasagna that we know today appeared in the Italian city of Naples during the Middle Ages.</p>
-  <p>The traditional lasagna recipe that was codified is the classic version of Bolognese cuisine. The lasagna alla bolognese consists of layers of thin pasta dough made with flour, egg, and spinach. There are ragù sauce and béchamel between each layer. Parmigiano-Reggiano cheese is lightly sprinkled on the top layer. The dish is baked to perfection!</p>
+  <p>While many of us think that lasagna pasta came from Italy, there are people who would argue that lasagna originated
+    in Greece or England. Anyway, the lasagna that we know today appeared in the Italian city of Naples during the
+    Middle Ages.</p>
+  <p>The traditional lasagna recipe that was codified is the classic version of Bolognese cuisine. The lasagna alla
+    bolognese consists of layers of thin pasta dough made with flour, egg, and spinach. There are ragù sauce and
+    béchamel between each layer. Parmigiano-Reggiano cheese is lightly sprinkled on the top layer. The dish is baked to
+    perfection!</p>
 
   <h3>So What's Lasagna Made Of?</h3>
-  <h6>Recipe Credit: <a href="https://www.christinascucina.com/lasagna-traditional-italian-recipe-easy-step-by-step-directions/">ChristinasCucina.com</a></h6>
+  <h6>Recipe Credit: <a
+      href="https://www.christinascucina.com/lasagna-traditional-italian-recipe-easy-step-by-step-directions/">ChristinasCucina.com</a>
+  </h6>
 
   <h4>Meat Sauce</h4>
 
@@ -27,7 +34,8 @@
     <li>3 or 4 cloves of garlic</li>
     <li>2 Tbsp chopped fresh parsley</li>
     <li>1 lb ground beef</li>
-    <li>Approximately 42 oz Italian tomato purée (passata) or whole tomatoes, puréed (the very best choice is San Marzano dell’Agro Sarnese-Nocerino, DOP)</li>
+    <li>Approximately 42 oz Italian tomato purée (passata) or whole tomatoes, puréed (the very best choice is San
+      Marzano dell’Agro Sarnese-Nocerino, DOP)</li>
     <li>Kosher or sea salt</li>
     <li>pepper</li>
     <li>fresh basil</li>
@@ -40,7 +48,8 @@
     <li>white pepper</li>
     <h4>Other Ingredients</h4>
     <li>1 lb lasagna noodles or sheets (use pasta from Italy, or homemade, for best results)</li>
-    <li>10 oz shredded mozzarella cheese (whole milk, low moisture) I recommend shredding your own cheese or you can also use fresh mozzarella, cut into small pieces</li>
+    <li>10 oz shredded mozzarella cheese (whole milk, low moisture) I recommend shredding your own cheese or you can
+      also use fresh mozzarella, cut into small pieces</li>
     <li>2 Tbsp grated Parmigiano Reggiano cheese to sprinkle on top</li>
   </ul>
 
@@ -52,8 +61,10 @@
     <li>Cook the Noodles (<em>Don't you dare use no-cook lasagna noodles!</em></li>
     <li>Assemble the Lasagna!</li>
     <li>Bake the Lasagna</li>
-    <li>Serve!</li>
   </ol>
+
+  <h3><em>Time To Serve!</em></h3>
+
 </body>
 
 </html>
